Add interface initialization for annotations
Add test for stepService initialization

--- a/recipe/pom.xml
+++ b/recipe/pom.xml
@@ -24,5 +24,13 @@
             <scope>${dep.version}</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.11.3</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 </project>
