--- a/recipe/src/main/resources/application.properties
+++ b/recipe/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-datasource.url=jdbc:postgresql://localhost:5432/recipes
+datasource.url=jdbc:postgresql://localhost:5432/recipe
 datasource.username=postgres
 datasource.password=123
