--- a/recipe/pom.xml
+++ b/recipe/pom.xml
@@ -47,6 +47,17 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.servlet.jsp.jstl</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.glassfish.web</groupId>
+            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
+            <version>3.0.1</version>
+        </dependency>
 
         <dependency>
             <groupId>org.postgresql</groupId>
@@ -73,7 +84,6 @@
             <version>5.11.3</version>
             <scope>test</scope>
         </dependency>
-
 
     </dependencies>
 </project>
